@@ -3,6 +3,8 @@
 from django import template
 from django.core.cache import cache
 from django.template import RequestContext, Context, loader
+from django.utils.html import escape
+import django.newforms as forms
 
 register = template.Library()
 
@@ -11,6 +13,9 @@ def field_item(form, field_name):
     # the 'form' we get here does not always have fields (when looking at
     # an existing IPR for instance)
     if hasattr(form, "fields"):
-        return loader.render_to_string("ipr/formfield.html", { 'field': form.fields[field_name] })
+        field = form.fields[field_name]
+        bf = forms.forms.BoundField(form, field, field_name)
+        errors = [escape(error) for error in bf.errors]
+        return loader.render_to_string("ipr/formfield.html", { 'field': field, "errors": errors, "help_text": field.help_text })
     else:
         return ""
